--- a/src/main/resources/homechef/initialSearchAndChat/interf1.fxml
+++ b/src/main/resources/homechef/initialSearchAndChat/interf1.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.InitialSearchAndChatControllerInterf1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.InitialSearchAndChatControllerInterf1">
     <children>
         <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="22.0" size="20" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
@@ -26,10 +26,6 @@
         <Button layoutX="267.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToISC" prefHeight="52.0" prefWidth="146.0" styleClass="button_bar">
             <graphic>
                 <FontAwesomeIcon fill="#377dff" glyphName="PAPER_PLANE" size="50" strokeMiterLimit="60.0" />
-            </graphic></Button>
-        <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" onAction="#goToPersonalForm" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0">
-            <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="SLIDERS" opacity="0.5" size="25" />
             </graphic></Button>
         <Button layoutX="133.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToHome" prefHeight="52.0" prefWidth="142.0" styleClass="button_bar">
             <graphic>
@@ -91,7 +87,7 @@
          <children>
             <Button fx:id="home1" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat1" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -103,7 +99,7 @@
                               <Font size="36.0" />
                            </font>
                         </Text>
-                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Userid : #" />
+                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Chef : " />
                      </children>
                   </Group>
                </graphic>
@@ -114,7 +110,7 @@
          <children>
             <Button fx:id="home2" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat2" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -126,7 +122,7 @@
                               <Font size="36.0" />
                            </font>
                         </Text>
-                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Userid : #" />
+                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Chef :" />
                      </children>
                   </Group>
                </graphic>
@@ -137,7 +133,7 @@
          <children>
             <Button fx:id="home3" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat3" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -149,7 +145,7 @@
                               <Font size="36.0" />
                            </font>
                         </Text>
-                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Userid : #" />
+                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Chef : " />
                      </children>
                   </Group>
                </graphic>
@@ -160,7 +156,7 @@
          <children>
             <Button fx:id="home4" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat4" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -172,7 +168,7 @@
                               <Font size="36.0" />
                            </font>
                         </Text>
-                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Userid : #" />
+                        <Text fx:id="userid" layoutX="65.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="listUser" text="Chef : " />
                      </children>
                   </Group>
                </graphic>
