--- a/src/main/resources/homechef/search/interf1.fxml
+++ b/src/main/resources/homechef/search/interf1.fxml
@@ -25,7 +25,7 @@
             </graphic></Button>
         <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" onAction="#goToPersonalForm" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0">
             <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="SLIDERS" opacity="0.5" size="25" />
+                <FontAwesomeIcon fill="#377dff" glyphName="BOOK" opacity="0.5" size="25" />
             </graphic></Button>
         <Button layoutX="133.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToHome" prefHeight="52.0" prefWidth="142.0" styleClass="button_bar">
             <graphic>
