--- a/src/main/resources/homechef/clientBook/interf1.fxml
+++ b/src/main/resources/homechef/clientBook/interf1.fxml
@@ -1,51 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.CalendarBookingController">
-    <top>
-        <HBox spacing="10" alignment="CENTER" style="-fx-padding: 10;">
-            <Label text="Calendario Prenotazioni" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
-        </HBox>
-    </top>
 
-    <center>
-        <VBox spacing="10" style="-fx-padding: 10;">
-            <DatePicker fx:id="datePicker" promptText="Seleziona una data" />
-            <ListView fx:id="bookingList" prefHeight="200" prefWidth="300" />
-        </VBox>
-    </center>
-
-    <bottom>
-        <HBox spacing="10" style="-fx-padding: 10;" alignment="CENTER">
-            <Button text="Nuova Prenotazione" onAction="#handleNewBooking" />
-            <Button text="Modifica Prenotazione" onAction="#handleEditBooking" />
-            <Button text="Elimina Prenotazione" onAction="#handleDeleteBooking" />
-        </HBox>
-    </bottom>
-
-    <right>
-        <VBox spacing="10" style="-fx-padding: 10;">
-            <Label text="Dettagli Prenotazione" />
-            <GridPane hgap="10" vgap="10">
-                <Label text="Nome Cliente:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-                <TextField fx:id="clientNameField" GridPane.rowIndex="0" GridPane.columnIndex="1" />
-
-                <Label text="Servizio:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
-                <TextField fx:id="serviceField" GridPane.rowIndex="1" GridPane.columnIndex="1" />
-
-                <Label text="Ora:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
-                <TextField fx:id="timeField" GridPane.rowIndex="2" GridPane.columnIndex="1" />
-            </GridPane>
-            <Button text="Salva" onAction="#handleSaveBooking" />
-        </VBox>
-    </right>
-</BorderPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Text layoutX="35.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="hiperlink_signup" text="9.31" />
+      <FontAwesomeIcon glyphName="SIGNAL" layoutX="290.0" layoutY="18.0" size="20" />
+      <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="21.0" size="20" />
+      <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../photo/battery.png" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
