--- a/src/main/resources/homechef/chefRating/interf2.fxml
+++ b/src/main/resources/homechef/chefRating/interf2.fxml
@@ -3,9 +3,9 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
@@ -19,8 +19,8 @@
         <AnchorPane fx:id="buttonBar" layoutX="-3.0" layoutY="2.0" prefHeight="790.0" prefWidth="102.0" />
         <AnchorPane fx:id="resultVisit" layoutX="668.0" layoutY="-2.0" prefHeight="780.0" prefWidth="765.0" stylesheets="@../css.css">
             <children>
-                <FontAwesomeIcon glyphName="BOOK" layoutX="294.0" layoutY="489.0" opacity="0.49" size="200" />
-                <Label layoutX="158.0" layoutY="197.0" opacity="0.49" style="-fx-font-size: 60;" styleClass="textSubTitle" text="Take a reservation" />
+                <FontAwesomeIcon glyphName="STAR" layoutX="294.0" layoutY="489.0" opacity="0.49" size="200" />
+                <Label layoutX="188.0" layoutY="203.0" opacity="0.49" style="-fx-font-size: 60;" styleClass="textSubTitle" text="Leave a rating" />
             </children></AnchorPane>
         <Line endX="350.0" endY="-154.0" layoutX="317.0" layoutY="-532.0" startX="350.00006103515625" startY="668.3671264648438" styleClass="line" translateY="682.0" />
         <Text fill="#243443" layoutX="-56.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textSubTitle" translateX="170.0" translateY="-10.0" />
@@ -57,32 +57,28 @@
         <Label fx:id="lb2" layoutX="626.0" layoutY="218.0" prefHeight="18.0" prefWidth="1.0" />
         <Label fx:id="lb3" layoutX="626.0" layoutY="280.0" />
         <Label fx:id="lb4" layoutX="417.0" layoutY="571.0" prefHeight="18.0" prefWidth="10.0" />
-      <Button layoutX="139.0" layoutY="57.0" mnemonicParsing="false" onAction="#backTo" prefHeight="30.0" prefWidth="35.0" styleClass="Back_Row">
-         <graphic>
-            <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" size="20" />
-         </graphic>
-      </Button>
-      <Button layoutX="587.0" layoutY="57.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="Back_Row">
-         <graphic>
-            <FontAwesomeIcon fill="WHITE" glyphName="COG" size="20" />
-         </graphic>
-         <padding>
-            <Insets top="2.0" />
-         </padding>
-      </Button>
-      <Text fill="#377dff" layoutX="272.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textTitle" text="HomeChef" />
-      <Text fill="#377dff" layoutX="150.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signupInterf2" text="Insert a date for the reservation" />
-      <DatePicker layoutX="176.0" layoutY="250.0" prefHeight="46.0" prefWidth="410.0" promptText="Select a date " />
-      <Text fill="#1def12" layoutX="209.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your reservation is done. The chef must accept the reservation " wrappingWidth="344.7837829589844">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Text fill="#ff0202" layoutX="185.0" layoutY="578.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The chef is not available for this date. " wrappingWidth="344.7837829589844">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
+        <Button layoutX="139.0" layoutY="57.0" mnemonicParsing="false" onAction="#backTo" prefHeight="30.0" prefWidth="35.0" styleClass="Back_Row">
+            <graphic>
+                <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" size="20" />
+            </graphic>
+        </Button>
+        <Button layoutX="587.0" layoutY="57.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="Back_Row">
+            <graphic>
+                <FontAwesomeIcon fill="WHITE" glyphName="COG" size="20" />
+            </graphic>
+            <padding>
+                <Insets top="2.0" />
+            </padding>
+        </Button>
+        <Text fill="#377dff" layoutX="272.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textTitle" text="HomeChef" />
+        <Text fill="#377dff" layoutX="150.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signupInterf2" text="Leave here your chef valuation" />
+        <Text fill="#1def12" layoutX="308.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thanks for rating" wrappingWidth="159.18380737304688">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </Text>
+      <Slider fx:id="posSL" layoutX="148.0" layoutY="249.0" majorTickUnit="1.0" max="5.0" maxWidth="-Infinity" min="1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="479.0" showTickLabels="true" value="5.0" />
+      <Button layoutX="316.0" layoutY="377.0" mnemonicParsing="false" onAction="#save" prefHeight="40.0" prefWidth="143.0" style="-fx-font-size: 18;" styleClass="Button" text="Rate the chef" />
 
     </children>
 </AnchorPane>
